@@ -1,3 +1,9 @@
+--BEGIN "ASYNC DNS"
+2009-07-10: Jason Long <jlong@messiah.edu>
+ * lib/Mail/DKIM/DNS.pm: new query_async method: starts a query and
+   returns a subref that when called will complete the query
+--END "ASYNC DNS"
+
 2009-12-14: Jason Long <jlong@messiah.edu>
  * MANIFEST: include sample_mime_lite.pl script in tarball
 
